<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">工厂测试</string>
    <string name="btn_success">成功</string>
    <string name="btn_fail">失败</string>
    <string name="menu_version">版本信息</string>
    <string name="menu_sleep_wake">休眠唤醒</string>
    <string name="menu_button">按键</string>
    <string name="menu_display">屏幕显示</string>
    <string name="menu_touch_screen">触屏</string>
    <string name="menu_light">亮度调节</string>
    <string name="menu_small_screen">小屏幕</string>
    <string name="menu_indicator_light">指示灯</string>
    <string name="menu_sdcard">SD卡</string>
    <string name="menu_simcard">SIM卡</string>
    <string name="menu_background_camera">后置相机/闪光灯</string>
    <string name="menu_flash_light">手电筒</string>
    <string name="menu_front_camera">前置相机</string>
    <string name="menu_bell">喇叭</string>
    <string name="menu_scan">扫描</string>
    <string name="menu_erji_mic">耳机MIC</string>
    <string name="menu_phone_mic">主机MIC</string>
    <string name="menu_wifi">WIFI</string>
    <string name="menu_bluetooth">蓝牙</string>
    <string name="menu_gps">GPS</string>
    <string name="menu_nfc">NFC</string>
    <string name="menu_usb">USB</string>
    <string name="menu_otg">OTG</string>
    <string name="menu_charge">有线充电</string>
    <string name="menu_gsensor">加速传感器</string>
    <string name="menu_light_sensor">光感</string>
    <string name="menu_call_phone">打电话</string>
    <string name="menu_eeprom">EEPROM</string>
    <string name="menu_expan_gps">外置GPS</string>
    <string name="menu_laser">激光</string>
    <string name="menu_vibrate">振动器</string>
    <string name="menu_compass_sensor">电子罗盘</string>
    <string name="menu_spk">听筒</string>
    <string name="menu_ris_camera">虹膜摄像头</string>
    <string name="menu_ris_psam">PSAM</string>
    <string name="menu_finger">指纹</string>
    <string name="menu_notline_charge">无线充电</string>
    <string name="menu_touch_mor">多点触摸</string>
    <string name="menu_barometer">气压计</string>
    <string name="menu_zhongli">重力感应</string>
    <string name="menu_usbplate">U盘</string>
    <string name="menu_maglev">磁吸附充电</string>
    <string name="menu_serialport">串口孔</string>
    <string name="menu_rfid">高频RFID</string>
    <string name="menu_uhf">超高频UHF</string>
    <string name="menu_gas_sensor">气体传感器</string>
    <string name="menu_camera_usb">矿灯摄像头</string>
    <string name="menu_expand">触点检测</string>
    <string name="menu_export">导出测试结果</string>
    <string name="menu_id2">ID2</string>
    <string name="menu_reset">清除测试记录</string>
    <string name="menu_rs232">RS232串口</string>
    <string name="menu_rj45">RJ45网线接口测试</string>
    <string name="menu_gpio">GPIO测试</string>
    <string name="menu_test485">485测试/2.4G</string>
    <string name="menu_print">打印机</string>
    <string name="menu_wifi_tanzhen">WIFI探针</string>
    <string name="menu_lamp_mic">矿灯MIC</string>
    <string name="menu_lamp_light">矿灯</string>
    <string name="menu_position_button">定位卡按键</string>
    <string name="menu_position_indicator">定位卡指示灯</string>
    <string name="menu_position_buzzer">定位卡蜂鸣器</string>
    <string name="menu_custom_light">自定义手电筒</string>
    <string name="VersionAct_modle">型号:</string>
    <string name="VersionAct_system_num">系统版本号:</string>
    <string name="VersionAct_apk_num">APK版本号:</string>
    <string name="SleepWakeAct_msg">请按下休眠按键</string>
    <string name="DisplayTestAct_display">屏幕显示</string>
    <string name="DisplayTestAct_lcdtesttip">请确认LCD是否有坏点</string>
    <string name="TsHandWritingAct_dialog_title">触屏</string>
    <string name="TsHandWritingAct_dialog_mes">请选择屏幕测试结果</string>
    <string name="TsHandWritingAct_dialog_btn">继续测试</string>
    <string name="LightAct_msg">请进行屏幕亮度测试</string>
    <string name="LndicatorLight_redtrue">红灯点亮</string>
    <string name="LndicatorLight_red_return">点亮红灯失败，返回</string>
    <string name="LndicatorLight_red_false">红灯点亮失败</string>
    <string name="LndicatorLight_blue_sure">已点亮蓝灯，请确认</string>
    <string name="LndicatorLight_green_sure">已点亮绿灯，请确认</string>
    <string name="LndicatorLight_red_sure">已点亮红灯，请确认</string>
    <string name="LndicatorLight_tips">提示</string>
    <string name="LndicatorLight_green_true">绿灯点亮</string>
    <string name="LndicatorLight_green_false">绿灯点亮失败</string>
    <string name="LndicatorLight_blue_true">蓝灯点亮</string>
    <string name="LndicatorLight_blue_false">蓝灯点亮失败</string>
    <string name="LndicatorLight_blue_close_false">蓝灯关闭失败</string>
    <string name="SmallScreenAct_server">启动服务失败</string>
    <string name="SmallScreenAct_write_faild">写入失败</string>
    <string name="SmallScreenAct_write_msg">你好思必拓</string>
    <string name="SmallScreenAct_write">请确认右上角小屏幕时间是否显示 你好思必拓</string>
    <string name="IndicatorLightAct_red_open">已点亮红灯,请确认</string>
    <string name="IndicatorLightAct_green_open">已点亮绿灯,请确认</string>
    <string name="IndicatorLightAct_bule_open">已点亮蓝灯,请确认</string>
    <string name="IndicatorLightAct_red_faild">红灯点亮失败</string>
    <string name="IndicatorLightAct_green_faild">绿灯点亮失败</string>
    <string name="IndicatorLightAct_bule_faild">蓝灯点亮失败</string>
    <string name="SDCardAct_neizhi">内置SD卡总大小</string>
    <string name="SDCardAct_wai">\n外置SD卡总大小</string>
    <string name="SDCardAct_keyong">\n可用大小</string>
    <string name="SDCardAct_copy_suc">\n外置SDCopy文件成功</string>
    <string name="SDCardAct_copy_fa">\n外置SD卡Copy文件失败</string>
    <string name="SDCardAct_copy_neisuc">\n内置SDCopy文件成功</string>
    <string name="SDCardAct_copy_neifa">\n内置SD卡Copy文件失败</string>
    <string name="SDCardAct_copy_no_wSD">\n请插入外置SD卡</string>
    <string name="SDCardkt80Act_sd1_off">\nSD卡1不存在</string>
    <string name="SDCardkt80Act_sd1_on">\nSD卡1存在</string>
    <string name="SDCardkt80Act_sd1_wai">\n外置SD1卡总大小</string>
    <string name="SDCardkt80Act_sd2_normal">\nSD2正常挂载可使用</string>
    <string name="SDCardkt80Act_sd2_damage">\nSD2损坏或者没正常格式化</string>
    <string name="SDCardkt80Act_sd2_none">\n无SD2卡</string>
    <string name="SDCardkt80Act_sd2_notsupport">\n不支持SD2卡</string>
    <string name="SimAct_on">SIM卡存在</string>
    <string name="SimAct_off">SIM卡不存在</string>
    <string name="SimAct_on1">SIM1卡存在\n</string>
    <string name="SimAct_off1">SIM1卡不存在\n</string>
    <string name="SimAct_on2">SIM2卡存在\n</string>
    <string name="SimAct_off2">SIM2卡不存在\n</string>
    <string name="SimAct_msg">请插入两张SIM卡进行测试!\n</string>
    <string name="SimKt40_on1">SIM1存在:</string>
    <string name="SimKt40_off1">\nSIM1不存在:</string>
    <string name="SimKt40_on2">SIM2存在:</string>
    <string name="SimKt40_off2">\nSIM2不存在:</string>
    <string name="camera_btn">拍照</string>
    <string name="camera_btn_buguang">拍照</string>
    <string name="camera_btn2">闪光拍照</string>
    <string name="camera_btn3">成功</string>
    <string name="camera_title">请点击屏幕进行对焦</string>
    <string name="camera_title2">对焦成功</string>
    <string name="camera_title3">对焦失败</string>
    <string name="camera_title4">拍照成功</string>
    <string name="camera_title5">请点击屏幕对焦</string>
    <string name="camera_title6">闪光灯拍照成功</string>
    <string name="camera_title7">请先打开前置补关灯</string>
    <string name="camera_title8">请点击拍照按钮进行拍照</string>
    <string name="camera_faild">相机打开失败</string>
    <string name="camera_msg">无前置摄像头</string>
    <string name="camera_toast">无法连接到相机！</string>
    <string name="BellAct_msg">请滑动进度条调节音量:</string>
    <string name="ScanAct_dialog_msg">扫描到的数据:</string>
    <string name="sound_music_play">播放音乐</string>
    <string name="sound_play">播放录音</string>
    <string name="sound_play_stop">停止播放</string>
    <string name="sound_start_record">开始录音</string>
    <string name="sound_stop_record">停止录音</string>
    <string name="sound_ermsg">请接入耳机</string>
    <string name="sound_ermsg2">耳机已插入,有麦克风\n请点击开始录音按钮进行录音</string>
    <string name="sound_er_tosast">未连接耳机</string>
    <string name="sound_er_tosast2">耳机已插入,无麦克风</string>
    <string name="sound_er_tosast3">耳机已插入,有麦克风</string>
    <string name="sound_phonemsg">请点击开始录音按钮进行录音</string>
    <string name="sound_record_time">录音时长：</string>
    <string name="sound_remaining_time">剩余时长：</string>
    <string name="usb_state_connect">USB 已接入</string>
    <string name="usb_state_no_connect">USB 断开状态</string>
    <string name="usb_state_msg">请插入USB</string>
    <string name="usb_state_msg2">请接入USB进行测试</string>
    <string name="usb_plate_msg1">U盘已挂载,请拔出</string>
    <string name="usb_plate_msg2">扫描U盘</string>
    <string name="usb_plate_msg3">U盘已移除</string>
    <string name="otg_msg">OTG模式\n</string>
    <string name="otg_msg2">读取中……</string>
    <string name="otg_msg3">已用空间:</string>
    <string name="otg_msg4">\n可用空间:</string>
    <string name="otg_msg5">非OTG模式\n请插入USB-OTG并连接U盘</string>
    <string name="bluetooth_state">可用设备:</string>
    <string name="bluetooth_toast">搜索完成,未搜索到任何设备</string>
    <string name="bluetooth_toast2">搜索完成</string>
    <string name="tv_st_success">正在定位...</string>
    <string name="tv_st_located">定位成功</string>
    <string name="g_null_text" />
    <string name="tv_st_info">正在获取GPS数据：</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="gps_st_info_snr">信噪比：</string>
    <string name="gps_st_info_prn">prn：</string>
    <string name="gps_st_info_azimuth">方位角：</string>
    <string name="gps_st_info_elevation">海拔：</string>
    <string name="gps_info_lat">纬度：</string>
    <string name="gps_info_lon">经度：</string>
    <string name="gps_info_speed">速度：</string>
    <string name="gps_info_elevation">高度：</string>
    <string name="gps_info_accuracy">精度：</string>
    <string name="gps_info_null">无法获取地理信息</string>
    <string name="gps_info_averageSignalIntensity">平均信号强度：</string>
    <string name="gps_open">请打开GPS</string>
    <string name="gps_start">开始定位</string>
    <string name="gps_searched">搜索到：</string>
    <string name="gps_count">颗卫星</string>
    <string name="gps_now_date">当前日期：</string>
    <string name="gps_year">年</string>
    <string name="gps_month">月</string>
    <string name="gps_day">日</string>
    <string name="gps_hour">时</string>
    <string name="gps_minute">分</string>
    <string name="gps_second">秒</string>
    <string name="gps_update_lon">设备位置信息\n经度：</string>
    <string name="gps_update_lat">\n纬度：</string>
    <string name="gps_out_sInfo">什么也没选！</string>
    <string name="out_gps_msg">测试失败！</string>
    <string name="out_gps_x300">X2测试失败！</string>
    <string name="menu_clear">清屏</string>
    <string name="nfc_toast_msg">NFC不可用</string>
    <string name="menu_help">帮助</string>
    <string name="menu_about">关于</string>
    <string name="btn_copy">复制</string>
    <string name="btn_nfc">设置</string>
    <string name="btn_exit">退出</string>
    <string name="tip_nfc_notfound">没有NFC硬件！</string>
    <string name="tip_nfc_disabled">NFC已禁用</string>
    <string name="tip_nfc_enabled">NFC已启用</string>
    <string name="msg_reading">读取中...</string>
    <string name="msg_nonfc">没有找到NFC硬件，程序无法工作！</string>
    <string name="msg_nfcdisabled">NFC已被禁用，请先启用该硬件。可以使用下边的 ‘设置’ 按钮控制NFC传感器的开关。</string>
    <string name="msg_nocard">没有卡片信息，请将卡片靠近手机后盖尝试重新读取。</string>
    <string name="msg_copied">卡片信息已经复制到剪贴板</string>
    <string name="lab_id">标识：</string>
    <string name="lab_pmm">参数：</string>
    <string name="lab_serl">序号：</string>
    <string name="lab_ver">版本：</string>
    <string name="lab_date">生效：</string>
    <string name="lab_op">使用：</string>
    <string name="lab_log">交易记录：</string>
    <string name="lab_balance">余额：</string>
    <string name="lab_cur_cny">元</string>
    <string name="lab_cur_hkd">港币</string>
    <string name="lab_op_time">次</string>
    <string name="SpeakerAct_msg">听筒正在播放音乐……</string>
    <string name="n80_outgps_tv1">GPS数据:</string>
    <string name="outgps_btn">开始测试</string>
    <string name="out_gps_tv1">读GPS数据</string>
    <string name="out_gps_btnX5">X5测试</string>
    <string name="out_gps_btnX2">X2测试</string>
    <string name="out_gps_btnSwitch">切换测试</string>
    <string name="speaker_btn1">切换</string>
</resources>