<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <com.spdata.factory.view.CustomTitlebar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        style="@style/main_button"
        android:layout_width="fill_parent"
        android:layout_height="260dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/base_text"
            android:text="@string/out_gps_tv1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="130dp">
            <TextView
                android:id="@+id/tv_gps"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                style="@style/base_text" />


        </ScrollView>
        <EditText
            android:id="@+id/edv_infors"
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:cursorVisible="false"
            android:editable="false"
            android:visibility="gone"
            android:textColorHint="#ff1111"
            android:textSize="12dp" >
        </EditText>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_zh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/out_gps_btnSwitch" />
            <Button
                android:id="@+id/btn_x2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/out_gps_btnX2" />

            <Button
                android:id="@+id/btn_x5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/out_gps_btnX5" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/selector_item_blue"
            android:text="@string/btn_success"
            android:textColor="@color/text_white"
            android:textSize="@dimen/commom_textsize" />

        <Button
            android:id="@+id/btn_not_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/selector_item_blue"
            android:text="@string/btn_fail"
            android:textColor="@color/text_white"
            android:textSize="@dimen/commom_textsize" />
    </LinearLayout>
</LinearLayout>
