<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <com.spdata.factory.view.CustomTitlebar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        style="@style/main_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/search_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_version_infor"
            style="@style/base_text"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:text="@string/SpeakerAct_msg" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="doClick"
            android:text="@string/speaker_btn1"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/selector_item_blue"
            android:text="@string/btn_success"
            android:textColor="@color/text_white"
            android:textSize="@dimen/commom_textsize" />

        <Button
            android:id="@+id/btn_not_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/selector_item_blue"
            android:text="@string/btn_fail"
            android:textColor="@color/text_white"
            android:textSize="@dimen/commom_textsize" />
    </LinearLayout>


</LinearLayout>
