<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.spdata.factory.view.CustomTitlebar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        style="@style/main_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/out_gps_tv1"
            style="@style/base_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edv_infor"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:cursorVisible="false"
            style="@style/base_text"
            android:editable="false"
            android:textColorHint="#ff1111"
            android:textSize="12dp" >
        </EditText>

        <Spinner
            android:id="@+id/province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/provarray"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_item_blue"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/out_gps_btnX5" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/selector_item_blue"
            android:layout_height="wrap_content"
            android:text="@string/out_gps_btnX2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/selector_item_blue"
            android:text="@string/btn_success"
            android:textColor="@color/text_white"
            android:textSize="@dimen/commom_textsize" />

        <Button
            android:id="@+id/btn_not_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/selector_item_blue"
            android:text="@string/btn_fail"
            android:textColor="@color/text_white"
            android:textSize="@dimen/commom_textsize" />
    </LinearLayout>


</LinearLayout>
