<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">


    <com.spdata.factory.view.CustomTitlebar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        style="@style/main_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/camera_front_text"-->
            <!--android:textSize="20sp" />-->

            <SurfaceView
                android:id="@+id/camera"
                android:layout_width="280dip"
                android:layout_height="300dip" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_photo"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_rectangle"
            android:text="@string/camera_btn"
            android:textSize="@dimen/commom_textsize"

            android:visibility="gone" />


    </LinearLayout>


    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/selector_item_blue"
            android:text="拍照"
            android:textColor="@color/text_white"
            android:textSize="@dimen/commom_textsize" />

        <Button
            android:id="@+id/btn_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/selector_item_blue"
            android:text="@string/camera_btn_buguang"
            android:textColor="@color/text_white"
            android:textSize="@dimen/commom_textsize" />

        <Button
            android:id="@+id/btn_not_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/selector_item_blue"
            android:text="@string/btn_success"
            android:textColor="@color/text_white"
            android:textSize="@dimen/commom_textsize" />
    </LinearLayout>

</LinearLayout>